# commons-daemon

./: .appveyor.yml
src/native/windows/apps/: CMakeLists.txt  README.md
src/native/windows/apps/cmake/: utils.cmake
src/native/windows/apps/prunmgr/: CMakeLists.txt  prunmgr.c
src/native/windows/apps/prunsrv/: CMakeLists.txt  prunsrv.c
src/native/windows/include/: apxwin.h
src/native/windows/src/: gui.c  handles.c  javajni.c  rprocess.c
