cmake_minimum_required(VERSION 3.4)
project(commons_daemon)

list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
include(cmake/utils.cmake)

if(NOT (DEFINED WINVER))
    set(WINVER "WINXP")
endif()

if(WINVER STREQUAL "WINXP")
    set(cmdm_nmake_winver "0x0501")
    set(cmdm_win32_ie     "0x0600")
elseif(WINVER STREQUAL "WIN2003")
    set(cmdm_nmake_winver "0x0502")
    set(cmdm_win32_ie     "0x0600")
elseif(WINVER STREQUAL "VISTA")
    set(cmdm_nmake_winver "0x0600")
    set(cmdm_win32_ie     "0x0700")
elseif(WINVER STREQUAL "WIN7")
    set(cmdm_nmake_winver "0x0700")
    set(cmdm_win32_ie     "0x0800")
else()
    message(FATAL_ERROR "Must specify WINVER environment variable (WINXP, WIN2003, VISTA, WIN7)")
endif()

set(cmdm_home_dir   "${CMAKE_CURRENT_SOURCE_DIR}/../../../..")
set(cmdm_target_dir "${cmdm_home_dir}/target")
set(cmdm_native_dir "${cmdm_home_dir}/src/native")
set(cmdm_native_windows_dir         "${cmdm_native_dir}/windows")
set(cmdm_native_windows_include_dir "${cmdm_native_windows_dir}/include")
set(cmdm_native_windows_src_dir     "${cmdm_native_windows_dir}/src")
set(cmdm_native_windows_apps_dir    "${cmdm_native_windows_dir}/apps")

add_subdirectory(prunsrv)
add_subdirectory(prunmgr)
